--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10.2)
-project(riscv_simulation_1)
+project(code)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(riscv_simulation_1 main.cpp program.h my_tools.h)
+add_executable(code main.cpp program.h my_tools.h)
